Trunk (unreleased changes)

  Non-backward compatible changes:

    BUGFIXES:

    IMPROVEMENTS:

  Backward compatible changes:

    BUGFIXES:
      bookkeeper-server:

        BOOKKEEPER-567: ReadOnlyBookieTest hangs on shutdown (sijie via ivank)

        BOOKKEEPER-549: Documentation missed for readOnlyMode support (ivank)

        BOOKKEEPER-548: Document about periodic ledger checker configuration (ivank)

        BOOKKEEPER-561: Findbugs report errors with openjdk (ivank via umamahesh)

        BOOKKEEPER-554: fd leaking when move ledger index file (sijie, ivank via sijie)

        BOOKKEEPER-568: NPE during GC with HierarchicalLedgerManager (Matteo via sijie)

        BOOKKEEPER-569: Critical performance bug in InterleavedLedgerStorage (ivank via fpj)

        BOOKKEEPER-559: Fix occasional failure in AuditorBookieTest (ivank via umamahesh)

    IMPROVEMENTS:

      BOOKKEEPER-555: Make BookieServer use Netty rather than a custom IO server (ivank)

      BOOKKEEPER-526: multiple threads for delivery manager (sijie via ivank)

      BOOKKEEPER-544: Modify hedwig server tests to allow client testcases to start/stop them as part of their tests (mridul via ivank)

      BOOKKEEPER-312: Implementation of JMS provider (mridul via ivank)

      BOOKKEEPER-556: BookieServerMXBean#getServerState makes no sense (ivank via sijie)

      BOOKKEEPER-574: Extend the bookkeeper shell to get a list of available bookies (ivank via umamahesh)

Release 4.2.0 - 2013-01-14

  Non-backward compatible changes:

    BUGFIXES:

    IMPROVEMENTS:

      bookkeeper-server:

        BOOKKEEPER-203: improve ledger manager interface to remove zookeeper dependency on metadata operations. (sijie via ivank)

        BOOKKEEPER-303: LedgerMetadata should serialized using protobufs (ivank)

      hedwig-client:

        BOOKKEEPER-339: Let hedwig cpp client support returning message seq id for publish requests. (sijie via ivank)

  Backward compatible changes:

    BUGFIXES:
